added white crypto icons, extended radio button scope, read input value

--- a/wallets.html
+++ b/wallets.html
@@ -36,22 +36,25 @@
 </div>
   <table class="table-accounts">
     <tr class="table-accounts__row">
-      <td class="table-accounts__icon"><img class="placeholder" src="images/usd.png"/></td>
+      <td class="table-accounts__icon"><img class="placeholder" src="images/bch60.png"/></td>
       <td class="table-accounts__crypto-amount">0.00044</td>
       <td class="table-accounts__equals"> ≃ </td>
-      <td class="table-accounts__currency-amount">$70.95</td>
+      <td class="table-accounts__currency-amount">70.95</td>
+      <td class="table-accounts__currency-change">+2.5%</td>
     </tr>
     <tr class="table-accounts__row">
-      <td class="table-accounts__icon"><img class="placeholder" src="images/btc.png"/></td>
+      <td class="table-accounts__icon"><img class="placeholder" src="images/btc60.png"/></td>
       <td class="table-accounts__crypto-amount">0.00044</td>
       <td class="table-accounts__equals"> ≃ </td>
-      <td class="table-accounts__currency-amount">$70.95</td>
+      <td class="table-accounts__currency-amount">70.95</td>
+      <td class="table-accounts__currency-change">+2.5%</td>
     </tr>
     <tr class="table-accounts__row">
-      <td class="table-accounts__icon"><img class="placeholder" src="images/ltc.png"/></td>
+      <td class="table-accounts__icon"><img class="placeholder" src="images/ltc60.png"/></td>
       <td class="table-accounts__crypto-amount">0.00044</td>
       <td class="table-accounts__equals"> ≃ </td>
-      <td class="table-accounts__currency-amount">$70.95</td>
+      <td class="table-accounts__currency-amount">70.95</td>
+      <td class="table-accounts__currency-change">+2.5%</td>
     </tr>
   </table>
 </div>
@@ -60,34 +63,34 @@
 <h2 class="table__title">Rates ($)</h2>
   <table class="table-rates">
     <tr class="table-rates__row">
-      <td class="table-rates__currency-amount">$5570.15</td>
+      <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
       <td class="table-rates__equals"> ≃ </td>
       <td class="table-rates__crypto-code">BTC</td>
-      <td class="table-rates__quantity">1</td>
+      <td class="table-rates__crypto-amount">0.000033</td>
     </tr>
     <tr class="table-rates__row">
-      <td class="table-rates__currency-amount">$5570.15</td>
+      <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
       <td class="table-rates__equals"> ≃ </td>
       <td class="table-rates__crypto-code">BTC</td>
-      <td class="table-rates__quantity">1</td>
+      <td class="table-rates__crypto-amount">0.000033</td>
     </tr>
     <tr class="table-rates__row">
-      <td class="table-rates__currency-amount">$5570.15</td>
+      <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
       <td class="table-rates__equals"> ≃ </td>
       <td class="table-rates__crypto-code">BTC</td>
-      <td class="table-rates__quantity">1</td>
+      <td class="table-rates__crypto-amount">0.000033</td>
     </tr>
     <tr class="table-rates__row">
-      <td class="table-rates__currency-amount">$5570.15</td>
+      <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
       <td class="table-rates__equals"> ≃ </td>
       <td class="table-rates__crypto-code">BTC</td>
-      <td class="table-rates__quantity">1</td>
+      <td class="table-rates__crypto-amount">0.000033</td>
     </tr>
     <tr class="table-rates__row">
-      <td class="table-rates__currency-amount">$5570.15</td>
+      <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
       <td class="table-rates__equals"> ≃ </td>
       <td class="table-rates__crypto-code">BTC</td>
-      <td class="table-rates__quantity">1</td>
+      <td class="table-rates__crypto-amount">0.000033</td>
     </tr>
   </table>
 </div>
