--- a/wallets.html
+++ b/wallets.html
@@ -13,105 +13,119 @@
 
 <body>
 
-<div class="header">
-  <h2 class="header__title">Chocolate coin</h2>
-</div>
+  <section id="ratesContent">
 
-<div class="content-accounts">
-<h2 class="table__title">Your Wallets</h2>
-<div class="table__currency">
-  <label class="table__currency-toggle">
+    <div class="header">
+      <h2 class="header__title">Chocolate coin</h2>
+    </div>
+
+    <div class="content-accounts">
+      <h2 class="table__title">Your Wallets</h2>
+      <div class="table__currency">
+        <label class="table__currency-toggle">
   <input type="radio" checked="checked" name="radio">
   <span class="table__currency-toggle--symbol">$</span>
 </label>
-<label class="table__currency-toggle">
+        <label class="table__currency-toggle">
   <input type="radio" name="radio">
   <span class="table__currency-toggle--symbol">£</span>
 </label>
-<label class="table__currency-toggle">
+        <label class="table__currency-toggle">
   <input type="radio" name="radio">
   <span class="table__currency-toggle--symbol">€</span>
 </label>
 
-</div>
-  <table class="table-accounts">
-    <tr class="table-accounts__row">
-      <td class="table-accounts__icon"><img class="placeholder" src="images/bch60.png"/></td>
-      <td class="table-accounts__crypto-amount">0.00044</td>
-      <td class="table-accounts__equals"> ≃ </td>
-      <td class="table-accounts__currency-amount">70.95</td>
-      <td class="table-accounts__currency-change">+2.5%</td>
-    </tr>
-    <tr class="table-accounts__row">
-      <td class="table-accounts__icon"><img class="placeholder" src="images/btc60.png"/></td>
-      <td class="table-accounts__crypto-amount">0.00044</td>
-      <td class="table-accounts__equals"> ≃ </td>
-      <td class="table-accounts__currency-amount">70.95</td>
-      <td class="table-accounts__currency-change">+2.5%</td>
-    </tr>
-    <tr class="table-accounts__row">
-      <td class="table-accounts__icon"><img class="placeholder" src="images/ltc60.png"/></td>
-      <td class="table-accounts__crypto-amount">0.00044</td>
-      <td class="table-accounts__equals"> ≃ </td>
-      <td class="table-accounts__currency-amount">70.95</td>
-      <td class="table-accounts__currency-change">+2.5%</td>
-    </tr>
-  </table>
-</div>
+      </div>
+      <table class="table-accounts">
+        <tr class="table-accounts__row">
+          <td class="table-accounts__icon"><img class="placeholder" src="images/bch60.png" /></td>
+          <td class="table-accounts__crypto-amount">0.00044</td>
+          <td class="table-accounts__equals"> ≃ </td>
+          <td class="table-accounts__currency-amount">70.95</td>
+          <td class="table-accounts__currency-change">+2.5%</td>
+        </tr>
+        <tr class="table-accounts__row">
+          <td class="table-accounts__icon"><img class="placeholder" src="images/btc60.png" /></td>
+          <td class="table-accounts__crypto-amount">0.00044</td>
+          <td class="table-accounts__equals"> ≃ </td>
+          <td class="table-accounts__currency-amount">70.95</td>
+          <td class="table-accounts__currency-change">+2.5%</td>
+        </tr>
+        <tr class="table-accounts__row">
+          <td class="table-accounts__icon"><img class="placeholder" src="images/ltc60.png" /></td>
+          <td class="table-accounts__crypto-amount">0.00044</td>
+          <td class="table-accounts__equals"> ≃ </td>
+          <td class="table-accounts__currency-amount">70.95</td>
+          <td class="table-accounts__currency-change">+2.5%</td>
+        </tr>
+      </table>
+    </div>
 
-<div class="content-rates">
-<h2 class="table__title">Rates ($)</h2>
-  <table class="table-rates">
-    <tr class="table-rates__row">
-      <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
-      <td class="table-rates__equals"> ≃ </td>
-      <td class="table-rates__crypto-code">BTC</td>
-      <td class="table-rates__crypto-amount">0.000033</td>
-    </tr>
-    <tr class="table-rates__row">
-      <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
-      <td class="table-rates__equals"> ≃ </td>
-      <td class="table-rates__crypto-code">BTC</td>
-      <td class="table-rates__crypto-amount">0.000033</td>
-    </tr>
-    <tr class="table-rates__row">
-      <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
-      <td class="table-rates__equals"> ≃ </td>
-      <td class="table-rates__crypto-code">BTC</td>
-      <td class="table-rates__crypto-amount">0.000033</td>
-    </tr>
-    <tr class="table-rates__row">
-      <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
-      <td class="table-rates__equals"> ≃ </td>
-      <td class="table-rates__crypto-code">BTC</td>
-      <td class="table-rates__crypto-amount">0.000033</td>
-    </tr>
-    <tr class="table-rates__row">
-      <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
-      <td class="table-rates__equals"> ≃ </td>
-      <td class="table-rates__crypto-code">BTC</td>
-      <td class="table-rates__crypto-amount">0.000033</td>
-    </tr>
-  </table>
-</div>
+    <div class="content-rates">
+      <h2 class="table__title">Rates ($)</h2>
+      <table class="table-rates">
+        <tr class="table-rates__row">
+          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
+          <td class="table-rates__equals"> ≃ </td>
+          <td class="table-rates__crypto-code">BTC</td>
+          <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
+        </tr>
+        <tr class="table-rates__row">
+          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
+          <td class="table-rates__equals"> ≃ </td>
+          <td class="table-rates__crypto-code">BTC</td>
+          <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
+        </tr>
+        <tr class="table-rates__row">
+          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
+          <td class="table-rates__equals"> ≃ </td>
+          <td class="table-rates__crypto-code">BTC</td>
+          <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
+        </tr>
+        <tr class="table-rates__row">
+          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
+          <td class="table-rates__equals"> ≃ </td>
+          <td class="table-rates__crypto-code">BTC</td>
+          <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
+        </tr>
+        <tr class="table-rates__row">
+          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
+          <td class="table-rates__equals"> ≃ </td>
+          <td class="table-rates__crypto-code">BTC</td>
+          <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
+        </tr>
+      </table>
+    </div>
 
-<div class="footer">
-  <ul class="footer-menu">
-    <li class="footer-menu__link">J</li>
-    <li id="helpButton" class="footer-menu__link">?</li>
-  </ul>
+    <div class="footer">
+      <ul class="footer-menu">
+        <li class="footer-menu__link">J</li>
+        <li id="aboutButton" class="footer-menu__link">?</li>
+      </ul>
 
-</div>
+    </div>
 
+    <!-- help content -->
+    <div class="about__modal">
+      <h2>What does Chocolate Coin do??</h2>
+      <p>Chocolate coin is not a complicated chrome extension. I wanted an easier way to see how my cryptos are doing while I am at my desk.
+        <br>
+        <br> Chocolate Coin allows you to:
+      </p>
 
-<!-- help content -->
+      <ul>
+        <li>○ Track the worth of cryptos in your Coinbase wallets in either dollars, euro or good old pounds.</li>
+        <li>○ Check the value of a selection of coins on Coinbase</li>
+        <li>○ Dream about/ scheme on how much you can spend on cryptos at the end of the month using the calculator</li>
+      </ul>
 
-<section id="helpScreen">
-<p>Hi this is content</p>
+      <p>This extension does not currently allow buying/selling of coins.</p>
 
-</section>
+    </div>
 
-<script src="myScript.js" type="text/javascript"></script>
+  </section>
+
+  <script src="myScript.js" type="text/javascript"></script>
 </body>
 
 </html>
