--- a/wallets.html
+++ b/wallets.html
@@ -62,34 +62,34 @@
     </div>
 
     <div class="content-rates">
-      <h2 class="table__title">Rates ($)</h2>
+      <h2 class="table__title">Rates (<span>$</span>)</h2>
       <table class="table-rates">
         <tr class="table-rates__row">
-          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
+          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1234"></td>
           <td class="table-rates__equals"> ≃ </td>
           <td class="table-rates__crypto-code">BTC</td>
           <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
         </tr>
         <tr class="table-rates__row">
-          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
+          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1234"></td>
           <td class="table-rates__equals"> ≃ </td>
           <td class="table-rates__crypto-code">BTC</td>
           <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
         </tr>
         <tr class="table-rates__row">
-          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
+          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1234"></td>
           <td class="table-rates__equals"> ≃ </td>
           <td class="table-rates__crypto-code">BTC</td>
           <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
         </tr>
         <tr class="table-rates__row">
-          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
+          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1234"></td>
           <td class="table-rates__equals"> ≃ </td>
           <td class="table-rates__crypto-code">BTC</td>
           <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
         </tr>
         <tr class="table-rates__row">
-          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="5" name="$54322" value="55304"></td>
+          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1234"></td>
           <td class="table-rates__equals"> ≃ </td>
           <td class="table-rates__crypto-code">BTC</td>
           <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
