added to styles, renamed signin elements, cleanup js

--- a/wallets.html
+++ b/wallets.html
@@ -13,7 +13,13 @@
 
 <body>
 
-  <section id="ratesContent">
+  <section id="signinContent">
+      <img class="signin__icon" src="/images/icon.png" alt="">
+      <a id="signinButton" class="signin__button" href="" target="_blank" >Sign in with Coinbase</a>
+  </section>
+
+
+  <section id="extensionContent">
 
     <div class="header">
       <h2 class="header__title">Chocolate coin</h2>
@@ -97,33 +103,33 @@
       </table>
     </div>
 
-    <div class="footer">
-      <ul class="footer-menu">
-        <li class="footer-menu__link">J</li>
-        <li id="aboutButton" class="footer-menu__link">?</li>
-      </ul>
-
-    </div>
-
-    <!-- help content -->
-    <div class="about__modal">
-      <h2>What does Chocolate Coin do??</h2>
-      <p>Chocolate coin is not a complicated chrome extension. I wanted an easier way to see how my cryptos are doing while I am at my desk.
-        <br>
-        <br> Chocolate Coin allows you to:
-      </p>
-
-      <ul>
-        <li>○ Track the worth of cryptos in your Coinbase wallets in either dollars, euro or good old pounds.</li>
-        <li>○ Check the value of a selection of coins on Coinbase</li>
-        <li>○ Dream about/ scheme on how much you can spend on cryptos at the end of the month using the calculator</li>
-      </ul>
-
-      <p>This extension does not currently allow buying/selling of coins.</p>
-
-    </div>
-
   </section>
+
+  <div class="footer">
+    <ul class="footer-menu">
+      <li class="footer-menu__link" href="http://murphyme.co.uk/">J</li>
+      <li id="aboutButton" class="footer-menu__link">?</li>
+    </ul>
+
+  </div>
+
+  <!-- help content -->
+  <div class="about__modal">
+    <h2>What does Chocolate Coin do??</h2>
+    <p>Chocolate coin is not a complicated chrome extension. I wanted an easier way to see how my cryptos are doing while I am at my desk.
+      <br>
+      <br> Chocolate Coin allows you to:
+    </p>
+
+    <ul>
+      <li>○ Track the worth of cryptos in your Coinbase wallets in either dollars, euro or good old pounds.</li>
+      <li>○ Check the value of a selection of coins on Coinbase</li>
+      <li>○ Dream about/ scheme on how much you can spend on cryptos at the end of the month using the calculator</li>
+    </ul>
+
+    <p>This extension does not currently allow buying/selling of coins.</p>
+
+  </div>
 
   <script src="myScript.js" type="text/javascript"></script>
 </body>
