compare both rates arrays to create useful data

--- a/wallets.html
+++ b/wallets.html
@@ -44,22 +44,22 @@
       </div>
       <table class="table-accounts">
         <tr class="table-accounts__row">
-          <td class="table-accounts__icon"><img class="placeholder" src="images/bch60.png" /></td>
-          <td class="table-accounts__crypto-amount">0.00044</td>
+          <td class="table-accounts__icon"><img class="placeholder" src="" /></td>
+          <td class="table-accounts__crypto-amount"></td>
           <td class="table-accounts__equals"> ≃ </td>
           <td class="table-accounts__currency-amount">70.95</td>
           <td class="table-accounts__currency-change">+2.5%</td>
         </tr>
         <tr class="table-accounts__row">
-          <td class="table-accounts__icon"><img class="placeholder" src="images/btc60.png" /></td>
-          <td class="table-accounts__crypto-amount">0.00044</td>
+          <td class="table-accounts__icon"><img class="placeholder" src="" /></td>
+          <td class="table-accounts__crypto-amount"></td>
           <td class="table-accounts__equals"> ≃ </td>
           <td class="table-accounts__currency-amount">70.95</td>
           <td class="table-accounts__currency-change">+2.5%</td>
         </tr>
         <tr class="table-accounts__row">
-          <td class="table-accounts__icon"><img class="placeholder" src="images/ltc60.png" /></td>
-          <td class="table-accounts__crypto-amount">0.00044</td>
+          <td class="table-accounts__icon"><img class="placeholder" src="" /></td>
+          <td class="table-accounts__crypto-amount"></td>
           <td class="table-accounts__equals"> ≃ </td>
           <td class="table-accounts__currency-amount">70.95</td>
           <td class="table-accounts__currency-change">+2.5%</td>
@@ -71,33 +71,33 @@
       <h2 class="table__title">Rates (<span>$</span>)</h2>
       <table class="table-rates">
         <tr class="table-rates__row">
-          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1234"></td>
+          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1"></td>
           <td class="table-rates__equals"> ≃ </td>
-          <td class="table-rates__crypto-code">BTC</td>
+          <td class="table-rates__crypto-code"></td>
           <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
         </tr>
         <tr class="table-rates__row">
-          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1234"></td>
+          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1"></td>
           <td class="table-rates__equals"> ≃ </td>
-          <td class="table-rates__crypto-code">BTC</td>
+          <td class="table-rates__crypto-code"></td>
           <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
         </tr>
         <tr class="table-rates__row">
-          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1234"></td>
+          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1"></td>
           <td class="table-rates__equals"> ≃ </td>
-          <td class="table-rates__crypto-code">BTC</td>
+          <td class="table-rates__crypto-code"></td>
           <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
         </tr>
         <tr class="table-rates__row">
-          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1234"></td>
+          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1"></td>
           <td class="table-rates__equals"> ≃ </td>
-          <td class="table-rates__crypto-code">BTC</td>
+          <td class="table-rates__crypto-code"></td>
           <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
         </tr>
         <tr class="table-rates__row">
-          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1234"></td>
+          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1"></td>
           <td class="table-rates__equals"> ≃ </td>
-          <td class="table-rates__crypto-code">BTC</td>
+          <td class="table-rates__crypto-code"></td>
           <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
         </tr>
       </table>
