--- a/wallets.html
+++ b/wallets.html
@@ -13,125 +13,63 @@
 
 <body>
 
-  <section id="signinContent">
-      <img class="signin__icon" src="/images/icon.png" alt="">
-      <a id="signinButton" class="signin__button" href="" target="_blank" >Sign in with Coinbase</a>
+  <section id="signinContent" class="visible">
+    <img class="signin__icon" src="/images/ChocolateCoins.png" alt="">
+    <a id="signinButton" class="signin__button" href="" target="_blank">Sign in with Coinbase</a>
+    <a class="signin__newaccount" href="https://www.coinbase.com/">Create an account</a>
+    <a class="signin__jack" href="https://murpjack.github.io/about/">Made by Jack Murphy</a>
   </section>
 
 
   <section id="extensionContent">
 
-    <div class="header">
-      <h2 class="header__title">Chocolate coin</h2>
-    </div>
+    <div class="content">
+      <h2 class="content__title">Your Accounts</h2>
+      <table class="table accounts">
+      </table>
 
-    <div class="content-accounts">
-      <h2 class="table__title">Your Wallets</h2>
-      <div class="table__currency">
-        <label class="table__currency-toggle">
-  <input type="radio" checked="checked" name="radio">
-  <span class="table__currency-toggle--symbol">$</span>
-</label>
-        <label class="table__currency-toggle">
-  <input type="radio" name="radio">
-  <span class="table__currency-toggle--symbol">£</span>
-</label>
-        <label class="table__currency-toggle">
-  <input type="radio" name="radio">
-  <span class="table__currency-toggle--symbol">€</span>
-</label>
-
+      <div class="currency">
+        <label class="currency__toggle">
+        <input type="radio" checked="checked" name="radio">
+        <!-- <span class="currency__toggle--symbol">$</span> -->
+        <span class="currency__toggle--symbol">USD</span>
+      </label>
+        <span class="currency__break">|</span>
+        <label class="currency__toggle">
+        <input type="radio" name="radio">
+        <!-- <span class="currency__toggle--symbol">£</span> -->
+        <span class="currency__toggle--symbol">GBP</span>
+      </label>
+        <span class="currency__break">|</span>
+        <label class="currency__toggle">
+        <input type="radio" name="radio">
+        <!-- <span class="currency__toggle--symbol">€</span> -->
+        <span class="currency__toggle--symbol">EUR</span>
+      </label>
       </div>
-      <table class="table-accounts">
-        <tr class="table-accounts__row">
-          <td class="table-accounts__icon"><img class="placeholder" src="" /></td>
-          <td class="table-accounts__crypto-amount"></td>
-          <td class="table-accounts__equals"> ≃ </td>
-          <td class="table-accounts__currency-amount">70.95</td>
-          <td class="table-accounts__currency-change">+2.5%</td>
-        </tr>
-        <tr class="table-accounts__row">
-          <td class="table-accounts__icon"><img class="placeholder" src="" /></td>
-          <td class="table-accounts__crypto-amount"></td>
-          <td class="table-accounts__equals"> ≃ </td>
-          <td class="table-accounts__currency-amount">70.95</td>
-          <td class="table-accounts__currency-change">+2.5%</td>
-        </tr>
-        <tr class="table-accounts__row">
-          <td class="table-accounts__icon"><img class="placeholder" src="" /></td>
-          <td class="table-accounts__crypto-amount"></td>
-          <td class="table-accounts__equals"> ≃ </td>
-          <td class="table-accounts__currency-amount">70.95</td>
-          <td class="table-accounts__currency-change">+2.5%</td>
-        </tr>
-      </table>
-    </div>
-
-    <div class="content-rates">
-      <h2 class="table__title">Rates (<span>$</span>)</h2>
-      <table class="table-rates">
-        <tr class="table-rates__row">
-          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1"></td>
-          <td class="table-rates__equals"> ≃ </td>
-          <td class="table-rates__crypto-code"></td>
-          <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
-        </tr>
-        <tr class="table-rates__row">
-          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1"></td>
-          <td class="table-rates__equals"> ≃ </td>
-          <td class="table-rates__crypto-code"></td>
-          <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
-        </tr>
-        <tr class="table-rates__row">
-          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1"></td>
-          <td class="table-rates__equals"> ≃ </td>
-          <td class="table-rates__crypto-code"></td>
-          <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
-        </tr>
-        <tr class="table-rates__row">
-          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1"></td>
-          <td class="table-rates__equals"> ≃ </td>
-          <td class="table-rates__crypto-code"></td>
-          <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
-        </tr>
-        <tr class="table-rates__row">
-          <td class="table-rates__amount"> <input class="table-rates__amount--input" type="text" maxlength="4" value="1"></td>
-          <td class="table-rates__equals"> ≃ </td>
-          <td class="table-rates__crypto-code"></td>
-          <td class="table-rates__crypto-amount"><span class="table-rates__crypto-amount--output"></span></td>
-        </tr>
-      </table>
-    </div>
 
   </section>
 
-  <div class="footer">
-    <ul class="footer-menu">
-      <li class="footer-menu__link" href="http://murphyme.co.uk/">J</li>
-      <li id="aboutButton" class="footer-menu__link">?</li>
-    </ul>
+  <div class="footer footer--blue">
+    <a id="aboutButton" class="footer__link" href="">?</a>
+    <!-- help content -->
+    <div class="footer__modal">
+      <h2>What does Chocolate Coin do??</h2>
+      <p>Chocolate coin is not a complicated chrome extension. I wanted an easier way to see how my cryptos are doing while I am at my desk.
+        <br>
+        <br> Chocolate Coin allows you to:
+        <br>
+        <br> ○ Track your Coinbase cryptos in dollars, euro or good old pounds.
+        <br>
+        <br>
+        <br> This extension does not currently allow buying/selling of coins.
+      </p>
+    </div>
 
   </div>
 
-  <!-- help content -->
-  <div class="about__modal">
-    <h2>What does Chocolate Coin do??</h2>
-    <p>Chocolate coin is not a complicated chrome extension. I wanted an easier way to see how my cryptos are doing while I am at my desk.
-      <br>
-      <br> Chocolate Coin allows you to:
-    </p>
 
-    <ul>
-      <li>○ Track the worth of cryptos in your Coinbase wallets in either dollars, euro or good old pounds.</li>
-      <li>○ Check the value of a selection of coins on Coinbase</li>
-      <li>○ Dream about/ scheme on how much you can spend on cryptos at the end of the month using the calculator</li>
-    </ul>
-
-    <p>This extension does not currently allow buying/selling of coins.</p>
-
-  </div>
-
-  <script src="myScript.js" type="text/javascript"></script>
+  <script src="myscript.js" type="text/javascript"></script>
 </body>
 
 </html>
