rewrite script in myscript.js

--- a/wallets.html
+++ b/wallets.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <section id="signinContent" class="visible">
+  <section id="signinContent" class="content">
     <img class="signin__icon" src="/images/ChocolateCoins.png" alt="">
     <a id="signinButton" class="signin__button" href="" target="_blank">Sign in with Coinbase</a>
     <a class="signin__newaccount" href="https://www.coinbase.com/">Create an account</a>
@@ -21,7 +21,7 @@
   </section>
 
 
-  <section id="extensionContent">
+  <section id="extensionContent" class="content">
 
     <div class="content">
       <h2 class="content__title">Your Accounts</h2>
@@ -50,22 +50,21 @@
 
   </section>
 
-  <div class="footer footer--blue">
+  <footer class="footer footer--blue">
     <a id="aboutButton" class="footer__link" href="">?</a>
-    <!-- help content -->
-    <div class="footer__modal">
-      <h2>What does Chocolate Coin do??</h2>
-      <p>Chocolate coin is not a complicated chrome extension. I wanted an easier way to see how my cryptos are doing while I am at my desk.
-        <br>
-        <br> Chocolate Coin allows you to:
-        <br>
-        <br> ○ Track your Coinbase cryptos in dollars, euro or good old pounds.
-        <br>
-        <br>
-        <br> This extension does not currently allow buying/selling of coins.
-      </p>
-    </div>
-
+  </footer>
+  <!-- help content -->
+  <div class="footer__modal">
+    <h2>What does Chocolate Coin do??</h2>
+    <p>Chocolate coin is not a complicated chrome extension. I wanted an easier way to see how my cryptos are doing while I am at my desk.
+      <br>
+      <br> Chocolate Coin allows you to:
+      <br>
+      <br> ○ Track your Coinbase cryptos in dollars, euro or good old pounds.
+      <br>
+      <br>
+      <br> This extension does not currently allow buying/selling of coins.
+    </p>
   </div>
 
 
