--- a/wallets.html
+++ b/wallets.html
@@ -68,7 +68,7 @@
   </div>
 
 
-  <script src="myscript.js" type="text/javascript"></script>
+  <script src="ccScript.js" type="text/javascript"></script>
 </body>
 
 </html>
